--- a/cursoWorkspace2/projects/11_registro_cliente/src/app/validacion/validacion.component.html
+++ b/cursoWorkspace2/projects/11_registro_cliente/src/app/validacion/validacion.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <h1>Clientes </h1><br><br>
 <h3>Usuario:<input type="text" [(ngModel)]="usuarioValidar"></h3> <br>
 <h3>Contrasena:<input type="password" [(ngModel)]="contrasenaValidar"> </h3><br>
@@ -12,4 +13,5 @@ Contrasena:<input type="text" [(ngModel)]="contrasena"> <br><br>
 Email:<input type="text" [(ngModel)]="email"> <br><br>
 Teléfono:<input type="text" [(ngModel)]="telefono"> <br><br>
 <button (click)="registrar()">Registrar</button>
+</div>
 </div>
