--- a/cursoWorkspace2/projects/13_agenda_completa/src/app/components/buscar/buscar.component.html
+++ b/cursoWorkspace2/projects/13_agenda_completa/src/app/components/buscar/buscar.component.html
@@ -7,13 +7,15 @@
   <button class="btn btn-info" (click)="buscar()">Buscar</button>
 
   <br><br>
+   
   <div *ngIf="contactoEncontrado">
     Nombre:{{contactoEncontrado.nombre}}<br>
-    Eamil:{{
-contactoEncontrado.email
-}}<br>
+    Email:{{contactoEncontrado.email}}<br>
     Telefono:{{contactoEncontrado.telefono}}<br>
   </div>
+
+
+
 </div>
 
 
