--- a/cursoWorkspace2/projects/13_agenda_completa/src/app/components/mostrar/mostrar.component.html
+++ b/cursoWorkspace2/projects/13_agenda_completa/src/app/components/mostrar/mostrar.component.html
@@ -1,1 +1,16 @@
-<p>mostrar works!</p>
+<div class="container">
+<table  *ngIf="agendaContactos.length>0">
+  <tr>
+    <th>Nombre</th>
+    <th>Email</th>
+    <th>Teléfono</th>
+    <th>Borrar</th>
+    </tr>
+    <tr *ngFor="let c of agendaContactos; let index=index">
+      <td>{{c.nombre}}</td>
+      <td>{{c.email}}</td>
+      <td>{{c.telefono}}</td>
+      <td> <button (click)="eliminar(index)">Eliminar</button></td>
+    </tr>
+</table>
+</div>
