primer commit clase 08/5

--- a/cursoWorkspace2/projects/13_agenda_completa/src/app/components/menu/menu.component.html
+++ b/cursoWorkspace2/projects/13_agenda_completa/src/app/components/menu/menu.component.html
@@ -1,3 +1,4 @@
+
 <div class="container">
 <a [routerLink]="['/registro']" routerLinkActive="router-link-active" >Nuevo Contacto</a>
 <a [routerLink]="['/buscar']" routerLinkActive="router-link-active" >Buscar Contacto</a>
@@ -8,6 +9,10 @@
 <router-outlet>
 
 
-
 </router-outlet>
 </div>
+<div class="container">
+  <h3>Mi Agenda de Contactos</h3>
+  <p> Agenda de contactos con routing y bootstrap, en Angular</p>
+</div>
+
