--- a/cursoWorkspace2/projects/20_movimiento/src/app/components/movimiento/movimiento.component.html
+++ b/cursoWorkspace2/projects/20_movimiento/src/app/components/movimiento/movimiento.component.html
@@ -6,19 +6,27 @@
   <input title="fecha2" type="date" name="fecha1" id="" [(ngModel)]="fecha2" />
 </div>
 <div>
-  <table>
-    <thead>
-      <th>Fecha Incial: {{ fecha1 }}</th>
-      <th>Fecha Final: {{ fecha2 }}</th>
-    </thead>
-    <tbody *ngFor="let m of movimientos">
-      <td>{{ m.fecha| date }}</td>
-      <td>{{ m.cantidad }}</td>
-      <td>{{ m.idCuenta }}</td>
-      <td>{{ m.operacion }}</td>
-    </tbody>
+  <table  mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+        <ng-container matColumnDef="Fecha">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha</th>
+          <td mat-cell *matCellDef="let m">{{m.fecha|date}}</td>
+        </ng-container>
+        <ng-container matColumnDef="Cantidad">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Cantidad</th>
+          <td mat-cell *matCellDef="let m">{{ m.cantidad }}</td>
+        </ng-container>
+        <ng-container matColumnDef="Cuenta">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Cuenta</th>
+          <td mat-cell *matCellDef="let m">{{ m.idCuenta }}</td>
+        </ng-container>
+        <ng-container matColumnDef="Operacion">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Operacion</th>
+          <td mat-cell *matCellDef="let m">{{ m.operacion }}</td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-  <button title="buscar" (click)="buscarFechas()" > BUSCAR </button>
+  <mat-paginator [pageSize]="2" [pageSizeOptions]="[2, 5, 10]" showFirstLastButtons></mat-paginator>
 </div>
 
 
